js262/test/language/statements/let/syntax/with-initialisers-in-statement-positions-while-expression-statement.js


/*---
es6id: 13.1
description: >
    let declarations with initialisers in statement positions:
    while ( Expression ) Statement
negative:
  phase: parse
  type: SyntaxError
---*/

$DONOTEVALUATE();
while (false) let x = 1;
